--- a/ticketing/test.html
+++ b/ticketing/test.html
@@ -352,7 +352,7 @@
                 db = firebase.getFirestore(app);
 
                 // Disable Firestore logs (Optional, but can be verbose)
-                firebase.setLogLevel('error');
+                setLogLevel('error');
                 
                 showLoading(true);
 
