--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <button data-category="발라드">발라드</button>
       <button data-category="K-POP">K-POP</button>
       <button data-category="트로트">트로트</button>
+      <button data-category="동요">동요</button>
       <button data-category="랩">랩</button>
     </section>
 
